{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 353,
  "lineage": "02db84ca-93d1-e8b5-e6c7-68e3a614970e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Motivalogic_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0309d593a9cca5499",
            "domain": "vpc",
            "id": "eipalloc-07aa87faa32cffb6d",
            "instance": "i-05cb24d24e6607a03",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0a5a08e0d7d8c7213",
            "private_dns": "ip-10-0-1-9.eu-west-1.compute.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-99-81-137-74.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.137.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.WP_Server_01",
            "aws_key_pair.VPC_key",
            "aws_security_group.Motivalogic_Frontend_sg",
            "aws_subnet.Motivalogic_Public_SN",
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WP_Server_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f89681a05a3a9de7",
            "arn": "arn:aws:ec2:eu-west-1:605149030174:instance/i-05cb24d24e6607a03",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cb24d24e6607a03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VPC_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5a08e0d7d8c7213",
            "private_dns": "ip-10-0-1-9.eu-west-1.compute.internal",
            "private_ip": "10.0.1.9",
            "public_ip": "18.203.161.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c345015595222b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085deea97a885d846",
            "tags": {
              "Name": "WP_Server_01"
            },
            "tags_all": {
              "Name": "WP_Server_01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02cbbdcca82532cd2"
            ]
          },
          "dependencies": [
            "aws_key_pair.VPC_key",
            "aws_security_group.Motivalogic_Frontend_sg",
            "aws_subnet.Motivalogic_Public_SN",
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Motivalogic_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605149030174:internet-gateway/igw-00a48ffee6b9790ea",
            "id": "igw-00a48ffee6b9790ea",
            "owner_id": "605149030174",
            "tags": {
              "Name": "Motivalogic_IGW"
            },
            "tags_all": {
              "Name": "Motivalogic_IGW"
            },
            "vpc_id": "vpc-0faf18fbd835c6e18"
          },
          "dependencies": [
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Motivalogic_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605149030174:route-table/rtb-06aa29226414f87a8",
            "id": "rtb-06aa29226414f87a8",
            "owner_id": "605149030174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a48ffee6b9790ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Motivalogic_RT"
            },
            "tags_all": {
              "Name": "Motivalogic_RT"
            },
            "vpc_id": "vpc-0faf18fbd835c6e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Motivalogic_IGW",
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Motivalogic_RT_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec32085ed6792a46",
            "route_table_id": "rtb-06aa29226414f87a8",
            "subnet_id": "subnet-085deea97a885d846"
          },
          "dependencies": [
            "aws_internet_gateway.Motivalogic_IGW",
            "aws_route_table.Motivalogic_RT",
            "aws_subnet.Motivalogic_Public_SN",
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Motivalogic_Frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605149030174:security-group/sg-02cbbdcca82532cd2",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cbbdcca82532cd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic from HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic from ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Motivalogic_Frontend_sg",
            "name_prefix": "",
            "owner_id": "605149030174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Motivalogic_Frontend_sg"
            },
            "tags_all": {
              "Name": "Motivalogic_Frontend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf18fbd835c6e18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Motivalogic_Public_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605149030174:subnet/subnet-085deea97a885d846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-085deea97a885d846",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605149030174",
            "tags": {
              "Name": "Motivalogic_Public_SN"
            },
            "tags_all": {
              "Name": "Motivalogic_Public_SN"
            },
            "vpc_id": "vpc-0faf18fbd835c6e18"
          },
          "dependencies": [
            "aws_vpc.Motivalogic_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Motivalogic_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:605149030174:vpc/vpc-0faf18fbd835c6e18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b0a58787d81158c",
            "default_route_table_id": "rtb-0adc87cc97db3f340",
            "default_security_group_id": "sg-07909bd72353726d4",
            "dhcp_options_id": "dopt-7d41a404",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0faf18fbd835c6e18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0adc87cc97db3f340",
            "owner_id": "605149030174",
            "tags": {
              "Name": "Motivalogic_VPC"
            },
            "tags_all": {
              "Name": "Motivalogic_VPC"
            }
          }
        }
      ]
    }
  ]
}